--- a/en/goddess-metempsychosis/0.0.8/index.html
+++ b/en/goddess-metempsychosis/0.0.8/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Goddess Metempsychosis 0.0.8</title>
-		<script type="text/javascript" src="/mender.js"></script>
+		<script type="text/javascript" src="/mender.js">window.onload = float_toc();</script>
 		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
 	</head>
 	<body>
