--- a/en/goddess-metempsychosis/0.0.8/index.html
+++ b/en/goddess-metempsychosis/0.0.8/index.html
@@ -4,7 +4,6 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Goddess Metempsychosis 0.0.8</title>
-		<script type="text/javascript" src="/mender.js">window.onload = float_toc();</script>
 		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
 	</head>
 	<body>
@@ -18,7 +17,7 @@
 		<p>
 			This is a prototype for Goddess Metempsychosis, a roleplaying game written by Mender, based on the Shin Megami Tensei series. This version of the game is free to play and distribute. A paid version will be forthcoming, with all player-facing content available for free.
 		</p>
-		<div class="toc">
+		<nav class="section-nav">
 			<h4>Table of Contents</h4>
 			<ul>
 				<li><a href="#foreword">Foreword</a></li>
@@ -30,7 +29,7 @@
 					</ul>
 				</li>
 			</ul>
-		</div>
+		</nav>
 		<main>
 			<h2 id="goddess">Goddess Metempsychosis</h2>
 			<p>
