--- a/en/goddess-metempsychosis/0.0.8/index.html
+++ b/en/goddess-metempsychosis/0.0.8/index.html
@@ -30,12 +30,12 @@
 			<nav class="section-nav">
 				<h4>Table of Contents</h4>
 				<ul>
-					<li><a href="#foreword">Foreword</a></li>
-					<li><a href="#goddess">Goddess Metempsychosis</a>
+					<li class=""><a href="#foreword">Foreword</a></li>
+					<li class=""><a href="#goddess">Goddess Metempsychosis</a>
 						<ul>
-							<li><a href="#cataclysm">Great Cataclysm</a></li>
-							<li><a href="#demons">Demons</a></li>
-							<li><a href="#survivors">Survivors</a></li>
+							<li class=""><a href="#cataclysm">Great Cataclysm</a></li>
+							<li class=""><a href="#demons">Demons</a></li>
+							<li class=""><a href="#survivors">Survivors</a></li>
 						</ul>
 					</li>
 				</ul>
