--- a/en/goddess-metempsychosis/0.0.8/index.html
+++ b/en/goddess-metempsychosis/0.0.8/index.html
@@ -26,16 +26,14 @@
 			<p>
 				In one way or another, a cataclysm has entirely transformed the world as your characters know it. Whether that cataclysm is a global nuclear war, the latest in a cycle of universal rebirth, or some fantastical armageddon is left as an exercise to the players and game master.
 			</p>
-			<a id="toc-button"><i class="far fa-bookmark"></i></a>
 			<nav class="section-nav">
-				<h4>Table of Contents</h4>
 				<ul>
-					<li class=""><a href="#foreword">Foreword</a></li>
-					<li class=""><a href="#goddess">Goddess Metempsychosis</a>
+					<li><a href="#foreword">Foreword</a></li>
+					<li><a href="#goddess">Goddess Metempsychosis</a>
 						<ul>
-							<li class=""><a href="#cataclysm">Great Cataclysm</a></li>
-							<li class=""><a href="#demons">Demons</a></li>
-							<li class=""><a href="#survivors">Survivors</a></li>
+							<li><a href="#cataclysm">Great Cataclysm</a></li>
+							<li><a href="#demons">Demons</a></li>
+							<li><a href="#survivors">Survivors</a></li>
 						</ul>
 					</li>
 				</ul>
