--- a/en/goddess-metempsychosis/0.0.8/index.html
+++ b/en/goddess-metempsychosis/0.0.8/index.html
@@ -13,11 +13,11 @@
 			<p>a post-apocalyptic urban fantasy game</p>
 			<p>by Mender</p>
 		</header>
-		<h2 href="#foreword">Foreword</h2>
-		<p>
-			This is a prototype for Goddess Metempsychosis, a roleplaying game written by Mender, based on the Shin Megami Tensei series. This version of the game is free to play and distribute. A paid version will be forthcoming, with all player-facing content available for free.
-		</p>
 		<div id="content">
+			<h2 href="#foreword">Foreword</h2>
+			<p>
+				This is a prototype for Goddess Metempsychosis, a roleplaying game written by Mender, based on the Shin Megami Tensei series. This version of the game is free to play and distribute. A paid version will be forthcoming, with all player-facing content available for free.
+			</p>
 			<h2 id="goddess">Goddess Metempsychosis</h2>
 			<p>
 				Goddess Metempsychosis is a pen-and-paper roleplaying game where players shape the future of an uncertain world as the balance of chaos and law crumbles.
@@ -27,17 +27,19 @@
 				In one way or another, a cataclysm has entirely transformed the world as your characters know it. Whether that cataclysm is a global nuclear war, the latest in a cycle of universal rebirth, or some fantastical armageddon is left as an exercise to the players and game master.
 			</p>
 		</div>
-		<div id="toc">
-			<ul>
-				<li><a href="#foreword">Foreword</a></li>
-				<li><a href="#goddess">Goddess Metempsychosis</a>
-					<ul>
-						<li><a href="#cataclysm">Great Cataclysm</a></li>
-						<li><a href="#demons">Demons</a></li>
-						<li><a href="#survivors">Survivors</a></li>
-					</ul>
-				</li>
-			</ul>
+		<div id="container">
+			<div id="toc">
+				<ul>
+					<li><a href="#foreword">Foreword</a></li>
+					<li><a href="#goddess">Goddess Metempsychosis</a>
+						<ul>
+							<li><a href="#cataclysm">Great Cataclysm</a></li>
+							<li><a href="#demons">Demons</a></li>
+							<li><a href="#survivors">Survivors</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</body>
 </html>
