--- a/en/goddess-metempsychosis/0.0.8/index.html
+++ b/en/goddess-metempsychosis/0.0.8/index.html
@@ -15,7 +15,7 @@
 		</header>
 		<div id="container">
 			<div id="content">
-				<h2 href="#foreword">Foreword</h2>
+				<h2 id="foreword">Foreword</h2>
 				<p>
 					This is a prototype for Goddess Metempsychosis, a roleplaying game written by Mender, based on the Shin Megami Tensei series. This version of the game is free to play and distribute. A paid version will be forthcoming, with all player-facing content available for free.
 				</p>
