--- a/en/pencil-puzzles/penpa2021/index.html
+++ b/en/pencil-puzzles/penpa2021/index.html
@@ -12,22 +12,24 @@
 			<h1>The Pencil Puzzle 2021</h1>
 		</header>
 		<div id="container">
-			<div id="toc">
-				<ul>
-					<li><a href="#pencils">Pencils</a> (<a href="../pencils">Rules</a>)</li> 
-					<li><a href="#numlin">Numberlink</a> (<a href="../numlin">Rules</a>)</li>
-					<li><a href="#masyu">Masyu</a> (<a href="../masyu">Rules</a>)</li>
-					<li><a href="#fillomino">Fillomino</a> (<a href="../fillomino">Rules</a>)</li>
-					<li><a href="#yajilin">Yajilin</a> (<a href="../yajilin">Rules</a>)</li>
-					<li><a href="#dbchoco">Double Choco</a> (<a href="../dbchoco">Rules</a>)</li>
-					<li><a href="#dotiloop">Dotchi-Loop</a> (<a href="../dotiloop">Rules</a>)</li>
-					<li><a href="#heyawake">Heyawake</a> (<a href="../heyawake">Rules</a>)</li>
-					<li><a href="#slither">Slitherlink</a> (<a href="../slither">Rules</a>)</li>
-					<li><a href="#kakuro">Kakuro</a> (<a href="../kakuro">Rules</a>)</li>
-					<li><a href="#heyagiant">Heyawake The Giant</a> (<a href="../heyawake">Rules</a>)</li>
-					<li><a href="#masyugiant">Masyu The Giant</a> (<a href="../masyu">Rules</a>)</li>
-					<li><a href="#answer">Answers</a></li>
-				</ul>
+			<div id="toc_container">
+				<div id="toc_content">
+					<ul>
+						<li><a href="#pencils">Pencils</a> (<a href="../pencils">Rules</a>)</li> 
+						<li><a href="#numlin">Numberlink</a> (<a href="../numlin">Rules</a>)</li>
+						<li><a href="#masyu">Masyu</a> (<a href="../masyu">Rules</a>)</li>
+						<li><a href="#fillomino">Fillomino</a> (<a href="../fillomino">Rules</a>)</li>
+						<li><a href="#yajilin">Yajilin</a> (<a href="../yajilin">Rules</a>)</li>
+						<li><a href="#dbchoco">Double Choco</a> (<a href="../dbchoco">Rules</a>)</li>
+						<li><a href="#dotiloop">Dotchi-Loop</a> (<a href="../dotiloop">Rules</a>)</li>
+						<li><a href="#heyawake">Heyawake</a> (<a href="../heyawake">Rules</a>)</li>
+						<li><a href="#slither">Slitherlink</a> (<a href="../slither">Rules</a>)</li>
+						<li><a href="#kakuro">Kakuro</a> (<a href="../kakuro">Rules</a>)</li>
+						<li><a href="#heyagiant">Heyawake The Giant</a> (<a href="../heyawake">Rules</a>)</li>
+						<li><a href="#masyugiant">Masyu The Giant</a> (<a href="../masyu">Rules</a>)</li>
+						<li><a href="#answer">Answers</a></li>
+					</ul>
+				</div>
 			</div>
 			<div id="content">
 				<h2 id="pencils">Pencils</h2>
