--- a/en/goddess-metempsychosis/0.0.8/index.html
+++ b/en/goddess-metempsychosis/0.0.8/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<header>
 			<p>English <a href="/fr/goddess-metempsychosis/0.0.8">Français</a></p>
-			<h1>Goddess Metempsychosis Basic 0.0.8</h1>
+			<h1>Goddess Metempsychosis 0.0.8</h1>
 			<p>a post-apocalyptic urban fantasy game</p>
 			<p>by Mender</p>
 		</header>
@@ -20,7 +20,7 @@
 					<li><a href="#goddess">Goddess Metempsychosis</a>
 						<ul>
 							<li><a href="#cataclysm">Great Cataclysm</a></li>
-							<li><a href="#demons">Demons</a></li>
+							<li><a href="#animi">Animi</a></li>
 							<li><a href="#survivors">Survivors</a></li>
 						</ul>
 					</li>
