--- a/en/goddess-metempsychosis/0.0.8/index.html
+++ b/en/goddess-metempsychosis/0.0.8/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<header>
 			<p>English <a href="/fr/goddess-metempsychosis/0.0.8">Français</a></p>
-			<h1>Goddess Metempsychosis 0.0.8</h1>
+			<h1>Goddess Metempsychosis 0.0.8 (Working Title)</h1>
 			<p>a post-apocalyptic urban fantasy game</p>
 			<p>by Mender</p>
 		</header>
