--- a/fr/goddess-metempsychosis/0.0.8/index.html
+++ b/fr/goddess-metempsychosis/0.0.8/index.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Métempsychose de la déesse 0.0.8 (Titre provisoire)</title>
+		<title>Métempsychose de la déesse 0.0.8</title>
 		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
 	</head>
 	<body>
 		<header>
 			<p><a href="/en/goddess-metempsychosis/0.8.8">English</a></p>
-			<h1>Métempsychose de la déesse 0.0.8</h1>
+			<h1>Métempsychose de la déesse 0.0.8 (Titre provisoire)</h1>
 			<p>un jeu de role fantasy urbaine post-apocalyptique</p>
 			<p>par Mender</p>
 		</header>
