--- a/en/goddess-metempsychosis/0.0.8/index.html
+++ b/en/goddess-metempsychosis/0.0.8/index.html
@@ -17,13 +17,12 @@
 			<div id="toc">
 				<ul>
 					<li><a href="#foreword">Foreword</a></li>
-					<li><a href="#goddess">Goddess Metempsychosis</a>
-						<ul>
-							<li><a href="#cataclysm">Great Cataclysm</a></li>
-							<li><a href="#animi">Animi</a></li>
-							<li><a href="#survivors">Survivors</a></li>
-						</ul>
-					</li>
+					<li><a href="#goddess">Goddess Metempsychosis</a></li>
+					<ul>
+						<li><a href="#cataclysm">Great Cataclysm</a></li>
+						<li><a href="#animi">Animi</a></li>
+						<li><a href="#survivors">Survivors</a></li>
+					</ul>
 				</ul>
 			</div>
 			<div id="content">
