--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 			var language = navigator.language || navigator.userLanguage; 
 			language = language.substring( 0, 2 );
 			if (language == "fr"){
-				window.location.href = "fr.html";
+				window.location.href = "fr/index.html";
 			}
 			else {
-				window.location.href = "en.html";
+				window.location.href = "en/index.html";
 			}
 		</script>
 		<p>Redirecting...</p>
