--- a/en/index.html
+++ b/en/index.html
@@ -11,15 +11,15 @@
   </head>
   <body>
     <header>
-      <p>English <a href=/fr>Français</a></p>
+      <p>English <a href=/fr/index.html>Français</a></p>
       <h1>im mender? :/</h1>
       <h2>Under Construction</h2>
     </header>
     <p>This site is currently undergoing renovations.</p>
     <h3>Resources</h3>
     <ul>
-      <li><a href=goddess-metempsychosis>Goddess Metempsychosis</a></li>
-      <li><a href=pencil-puzzles>Pencil Puzzles</a></li>
+      <li><a href=goddess-metempsychosis/index.html>Goddess Metempsychosis</a></li>
+      <li><a href=pencil-puzzles/index.html>Pencil Puzzles</a></li>
     </ul>
   </body>
 </html>
