--- a/en/pencil-puzzles/index.html
+++ b/en/pencil-puzzles/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<p>English <a href="/fr/pencil-puzzles">Français</a></p>
+			<p>English <a href="/fr/pencil-puzzles/index.html">Français</a></p>
 			<h1>Japanese Logic Puzzles</h1>
 		</header>
 		<p>This site is an archive of logic puzzles published by the Japanese company Nikoli.</p>
@@ -19,7 +19,7 @@
 		<h1>Archives</h1>
 		<ul>
 			<li><a>The Pencil Puzzle 2020</a></li>
-			<li><a href="penpa2021">The Pencil Puzzle 2021</a></li>
+			<li><a href="penpa2021/index.html">The Pencil Puzzle 2021</a></li>
 			<li><a>The Pencil Puzzle 2022</a></li>
 		</ul>
 	</body>
