--- a/en/pencil-puzzles/pencils/index.html
+++ b/en/pencil-puzzles/pencils/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<p>English <a href="/fr/pencil-puzzles/pencils">Français</a></p>
+			<p>English <a href="/fr/pencil-puzzles/pencils/index.html">Français</a></p>
 			<h1>Rules of Pencils</h1>
 		</header>
 		<ol type="1">
