--- a/fr/pencil-puzzles/index.html
+++ b/fr/pencil-puzzles/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<p><a href="/en/pencil-puzzles">English</a> Français</p>
+			<p><a href="/en/pencil-puzzles/index.html">English</a> Français</p>
 			<h1>Casse-têtes logiques japonais</h1>
 		</header>
 		<p>Ce site est une archive de casse-têtes logiques publiés par la compagnie japonaise Nikoli.</p>
@@ -19,7 +19,7 @@
 		<h1>Archives</h1>
 		<ul>
 			<li><a>The Pencil Puzzle 2020</a></li>
-			<li><a href="penpa2021">The Pencil Puzzle 2021</a></li>
+			<li><a href="penpa2021/index.html">The Pencil Puzzle 2021</a></li>
 			<li><a>The Pencil Puzzle 2022</a></li>
 		</ul>
 	</body>
