--- a/fr/pencil-puzzles/pencils/index.html
+++ b/fr/pencil-puzzles/pencils/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<p><a href="/en/pencil-puzzles/pencils">English</a> Français</p>
+			<p><a href="/en/pencil-puzzles/pencils/index.html">English</a> Français</p>
 			<h1>Règles de Pencils</h1>
 		</header>
 		<ol type="1">
