--- a/fr/pencil-puzzles/penpa2021/index.html
+++ b/fr/pencil-puzzles/penpa2021/index.html
@@ -11,47 +11,39 @@
 			<p><a href="/en/pencil-puzzles/penpa2021">English</a> Français</p>
 			<h1>The Pencil Puzzle 2021</h1>
 		</header>
-		<h2 id="tdm">Table des matières</h2>
-		<ol type="1">
-			<li><a href="#pencils">Pencils</a> (<a href="../pencils">Règles</a>)</li>
-			<li><a href="#numlin">Numberlink</a> (<a href="../numlin">Règles</a>)</li>
-			<li><a href="#masyu">Masyu</a> (<a href="../masyu">Règles</a>)</li>
-			<li><a href="#fillomino">Fillomino</a> (<a href="../fillomino">Règles</a>)</li>
-			<li><a href="#yajilin">Yajilin</a> (<a href="../yajilin">Règles</a>)</li>
-			<li><a href="#dbchoco">Double Choco</a> (<a href="../dbchoco">Règles</a>)</li>
-			<li><a href="#dotiloop">Dotchi-Loop</a> (<a href="../dotiloop">Règles</a>)</li>
-			<li><a href="#heyawake">Heyawake</a> (<a href="../heyawake">Règles</a>)</li>
-			<li><a href="#slither">Slitherlink</a> (<a href="../slither">Règles</a>)</li>
-			<li><a href="#kakuro">Kakuro</a> (<a href="../kakuro">Règles</a>)</li>
-			<li><a href="#heyageant">Heyawake le géant</a> (<a href="../heyawake">Règles</a>)</li>
-			<li><a href="#masyugeant">Masyu le géant</a> (<a href="../masyu">Règles</a>)</li>
-			<li><a href="#reponse">Réponses</a></li>
-		</ol>
-		<h2 id="pencils">Pencils</h2>
-		<a href="#tdm">Retourner à la table des matières</a>
-		<h2 id="numlin">Numberlink</h2>
-		<a href="#tdm">Retourner à la table des matières</a>
-		<h2 id="masyu">Masyu</h2>
-		<a href="#tdm">Retourner à la table des matières</a>
-		<h2 id="fillomino">Fillomino</h2>
-		<a href="#tdm">Retourner à la table des matières</a>
-		<h2 id="yajilin">Yajilin</h2>
-		<a href="#tdm">Retourner à la table des matières</a>
-		<h2 id="dbchoco">Double Choco</h2>
-		<a href="#tdm">Retourner à la table des matières</a>
-		<h2 id="dotiloop">Dotchi-Loop</h2>
-		<a href="#tdm">Retourner à la table des matières</a>
-		<h2 id="heyawake">Heyawake</h2>
-		<a href="#tdm">Retourner à la table des matières</a>
-		<h2 id="slither">Slitherlink</h2>
-		<a href="#tdm">Retourner à la table des matières</a>
-		<h2 id="kakuro">Kakuro</h2>
-		<a href="#tdm">Retourner à la table des matières</a>
-		<h2 id="heyageant">Heyawake The Giant</h2>
-		<a href="#tdm">Retourner à la table des matières</a>
-		<h2 id="masyugeant">Masyu The Giant</h2>
-		<a href="#tdm">Retourner à la table des matières</a>
-		<h3 id="reponse">Réponses</h3>
-		<a href="#tdm">Retourner à la table des matières</a>
+		<div id="container">
+			<div id="toc">
+				<ul>
+					<li><a href="#pencils">Pencils</a> (<a href="../pencils/index.html">Règles</a>)</li>
+					<li><a href="#numlin">Numberlink</a> (<a href="../numlin/index.html">Règles</a>)</li>
+					<li><a href="#masyu">Masyu</a> (<a href="../masyu/index.html">Règles</a>)</li>
+					<li><a href="#fillomino">Fillomino</a> (<a href="../fillomino/index.html">Règles</a>)</li>
+					<li><a href="#yajilin">Yajilin</a> (<a href="../yajilin/index.html">Règles</a>)</li>
+					<li><a href="#dbchoco">Double Choco</a> (<a href="../dbchoco/index.html">Règles</a>)</li>
+					<li><a href="#dotiloop">Dotchi-Loop</a> (<a href="../dotiloop/index.html">Règles</a>)</li>
+					<li><a href="#heyawake">Heyawake</a> (<a href="../heyawake/index.html">Règles</a>)</li>
+					<li><a href="#slither">Slitherlink</a> (<a href="../slither/index.html">Règles</a>)</li>
+					<li><a href="#kakuro">Kakuro</a> (<a href="../kakuro/index.html">Règles</a>)</li>
+					<li><a href="#heyageant">Heyawake le géant</a> (<a href="../heyawake/index.html">Règles</a>)</li>
+					<li><a href="#masyugeant">Masyu le géant</a> (<a href="../masyu/index.html">Règles</a>)</li>
+					<li><a href="#reponse">Réponses</a></li>
+				</ul>
+			</div>
+			<div id="content">
+				<h2 id="pencils">Pencils</h2>
+				<h2 id="numlin">Numberlink</h2>
+				<h2 id="masyu">Masyu</h2>
+				<h2 id="fillomino">Fillomino</h2>
+				<h2 id="yajilin">Yajilin</h2>
+				<h2 id="dbchoco">Double Choco</h2>
+				<h2 id="dotiloop">Dotchi-Loop</h2>
+				<h2 id="heyawake">Heyawake</h2>
+				<h2 id="slither">Slitherlink</h2>
+				<h2 id="kakuro">Kakuro</h2>
+				<h2 id="heyageant">Heyawake The Giant</h2>
+				<h2 id="masyugeant">Masyu The Giant</h2>
+				<h3 id="reponse">Réponses</h3>
+			</div>
+		</div>
 	</body>
 </html>
