--- a/en/goddess-metempsychosis/index.html
+++ b/en/goddess-metempsychosis/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Goddess Metempsychosis - a post-apocalyptic urban fantasy game</title>
-    <!-- The style.css file allows you to change the look of your web pages.
-         If you include the next line in all your web pages, they will all share the same look.
-         This makes it easier to make new pages for your site. -->
-    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
-  </head>
-  <body>
-    <header>
-      <p>English <a href="/fr/goddess-metempsychosis">Français</a></p>
-      <h1>Goddess Metempsychosis</h1>
-      <p>a post-apocalyptic urban fantasy game</p>
-      <p>by Mender</p>
-    </header>
-    <h2>Non-playable draft 0.0.8</h2>
-    The current version is available in <a href="0.0.8">HTML</a>.
-  </body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Goddess Metempsychosis - a post-apocalyptic urban fantasy game</title>
+		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
+	</head>
+	<body>
+		<header>
+			<p>English <a href="/fr/goddess-metempsychosis/index.html">Français</a></p>
+			<h1>Goddess Metempsychosis</h1>
+			<p>a post-apocalyptic urban fantasy game</p>
+			<p>by Mender</p>
+		</header>
+		<h2>Available versions</h2>
+		<ul>
+			<li>Unplayable</li>
+			<ul>
+				<li><a href="0.0.8/index.html">0.0.8</a></li>
+			</ul>
+		</ul>
+	</body>
 </html>
