--- a/fr/goddess-metempsychosis/0.0.8/index.html
+++ b/fr/goddess-metempsychosis/0.0.8/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +8,9 @@
 	</head>
 	<body>
 		<header>
-			<p><a href="/en/goddess-metempsychosis/0.0.8">English</a> Français</p>
+			<p><a href="/en/goddess-metempsychosis/0.0.8/index.html">English</a> Français</p>
 			<h1>Métempsychose de la déesse 0.0.8 (Titre provisoire)</h1>
-			<p>un jeu de role fantasy urbaine post-apocalyptique</p>
+			<p>un jeu de rôle fantasy urbaine post-apocalyptique</p>
 			<p>par Mender</p>
 		</header>
 		<div id="container">
