--- a/en/goddess-metempsychosis/0.0.8/index.html
+++ b/en/goddess-metempsychosis/0.0.8/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<p>English <a href="/fr/goddess-metempsychosis/0.0.8">Français</a></p>
+			<p>English <a href="/fr/goddess-metempsychosis/0.0.8/index.html">Français</a></p>
 			<h1>Goddess Metempsychosis 0.0.8 (Working Title)</h1>
 			<p>a post-apocalyptic urban fantasy game</p>
 			<p>by Mender</p>
