--- a/en/index.html
+++ b/en/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>im mender? :/</title>
-    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
-  </head>
-  <body>
-    <header>
-      <p>English <a href=/fr/index.html>Français</a></p>
-      <h1>im mender? :/</h1>
-      <h2>Under Construction</h2>
-    </header>
-    <p>This site is currently undergoing renovations.</p>
-    <h3>Resources</h3>
-    <ul>
-      <li><a href=goddess-metempsychosis/index.html>Goddess Metempsychosis</a></li>
-      <li><a href=pencil-puzzles/index.html>Pencil Puzzles</a></li>
-    </ul>
-  </body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Mender's web page</title>
+		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
+	</head>
+	<body>
+		<header>
+			<p>English <a href=/fr/index.html>Français</a></p>
+			<h1>im mender? :/</h1>
+			<h2>Under Construction</h2>
+		</header>
+		<p>This site is currently undergoing renovations.</p>
+		<h3>Resources</h3>
+		<ul>
+			<li><a href="goddess-metempsychosis/index.html">Goddess Metempsychosis</a></li>
+			<li><a href="pencil-puzzles/index.html">Pencil Puzzles</a></li>
+		</ul>
+	</body>
 </html>
