--- a/fr/goddess-metempsychosis/0.0.8/index.html
+++ b/fr/goddess-metempsychosis/0.0.8/index.html
@@ -3,21 +3,21 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Métempsychose de la déesse 0.0.8</title>
+		<title>M&eacute;tempsychose de la d&eacute;esse 0.0.8</title>
 		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
 	</head>
 	<body>
 		<header>
 			<p><a href="/en/goddess-metempsychosis/0.0.8/index.html">English</a> Français</p>
-			<h1>Métempsychose de la déesse 0.0.8 (Titre provisoire)</h1>
-			<p>un jeu de rôle fantasy urbaine post-apocalyptique</p>
+			<h1>M&eacute;tempsychose de la d&eacute;esse 0.0.8 (Titre provisoire)</h1>
+			<p>un jeu de r&ocirc;le fantasy urbaine post-apocalyptique</p>
 			<p>par Mender</p>
 		</header>
 		<div id="container">
 			<div id="toc">
 				<ul>
 					<li><a href="#avprop">Avant-propos</a></li>
-					<li><a href="#deesse">Métempsychose de la déesse</a></li>
+					<li><a href="#deesse">M&eacute;tempsychose de la d&eacute;esse</a></li>
 					<ul>
 						<li><a href="#cataclysme">Grand cataclysme</a></li>
 						<li><a href="#animus">Animus</a></li>
@@ -28,15 +28,15 @@
 			<div id="content">
 				<h2 id="avprop">Avant-propos</h2>
 				<p>
-					Ceci est un prototype de Métempsychose de la déesse, un jeu de rôle rédigé par Mender, basé sur la série Shin Megami Tensei. Cette version du jeu peut être jouée et redistribuée gratuitement. Une version payante sera disponible dans le futur, avec tout le contenu qui est destiné aux joueurs disponible gratis.
+					Ceci est un prototype de M&eacute;tempsychose de la déesse, un jeu de r&ocirc;le r&eacute;dig&eacute; par Mender, bas&eacute; sur la s&eacute;rie Shin Megami Tensei. Cette version du jeu peut &ecirc;tre jou&eacute;e et redistribu&eacute;e gratuitement. Une version payante sera disponible dans le futur, avec tout le contenu qui est destin&eacute; aux joueurs disponible gratis.
 				</p>
-				<h2 id="deesse">Métempsychose de la déesse</h2>
+				<h2 id="deesse">M&eacute;tempsychose de la déesse</h2>
 				<p>
-					Métempsychose de la déesse est un jeu de rôle papier dans lequel les joueurs donnent forme à l'avenir d'un monde incertain alors que l'équilibre entre le chaos et la loi s'effondre.
+					M&eacute;tempsychose de la d&eacute;esse est un jeu de r&ocirc;le papier dans lequel les joueurs donnent forme &agrave; l'avenir d'un monde incertain alors que l'&eacute;quilibre entre le chaos et la loi s'effondre.
 				</p>
 				<h3 id="cataclysme">Grand cataclysme</h3>
 				<p>
-					D'une façon ou d'une autre, un cataclysme a entièrement transformé le monde tel que vos personnages le connaissent. Les détails de ce cataclysme sont un exercice laissé aux joueurs et au MdJ. C'était peut-être une guerre nucléaire mondiale, la dernière d'un cycle de renaissance universel, ou un armageddon fantastique quelconque.
+					D'une façon ou d'une autre, un cataclysme a enti&egrave;rement transform&eacute; le monde tel que vos personnages le connaissent. Les d&eacute;tails de ce cataclysme sont un exercice laiss&eacute; aux joueurs et au MdJ. C'&eacute;tait peut-&ecirc;tre une guerre nucl&eacute;aire mondiale, le dernier d'un cycle de renaissance universel, ou un armageddon fantastique quelconque.
 				</p>
 			</div>
 		</div>
