--- a/fr/index.html
+++ b/fr/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Bienvenue à mon site web</title>
+		<title>La page web de Mender</title>
 		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
 	</head>
 	<body>
@@ -12,11 +12,11 @@
 			<h1>im mender? :/</h1>
 			<h2>En construction</h2>
 		</header>
-		<p>Ce site est en rénovation.</p>
+		<p>Ce site est en r&eacute;novation.</p>
 		<h3>Ressources</h3>
 		<ul>
-			<li><a href="goddess-metempsychosis/index.html">Métempsychose de la déesse</a></li>
-			<li><a href="pencil-puzzles/index.html">Casse-tetes logiques japonais</a></li>
+			<li><a href="goddess-metempsychosis/index.html">M&eacute;tempsychose de la d&eacute;esse</a></li>
+			<li><a href="pencil-puzzles/index.html">Casse-t&ecirc;tes logiques japonais</a></li>
 		</ul>
 	</body>
 </html>
