--- a/fr/goddess-metempsychosis/index.html
+++ b/fr/goddess-metempsychosis/index.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Métempsychose de la déesse - un jeu fantasy urbaine post-apocalyptique</title>
+		<title>M&eacute;tempsychose de la d&eacute;esse - un jeu fantasy urbaine post-apocalyptique</title>
 		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
 	</head>
 	<body>
 		<header>
-			<p><a href="/fr/goddess-metempsychosis/index.html">English</a> Français</p>
-			<h1>Métempsychose de la déesse</h1>
-			<p>un jeu de rôle fantasy urbaine post-apocalyptique</p>
+			<p><a href="/fr/goddess-metempsychosis/index.html">English</a> Fran&ccedil;ais</p>
+			<h1>M&eacute;tempsychose de la d&eacute;esse</h1>
+			<p>un jeu de r&ocirc;le fantasy urbaine post-apocalyptique</p>
 			<p>par Mender</p>
 		</header>
 		<h2>Versions disponibles</h2>
