--- a/fr/index.html
+++ b/fr/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<p><a href="/en/index.html">English</a> Français</p>
+			<p><a href="/en/index.html">English</a> Fran&ccedil;ais</p>
 			<h1>im mender? :/</h1>
 			<h2>En construction</h2>
 		</header>
