--- a/en/goddess-metempsychosis/index.html
+++ b/en/goddess-metempsychosis/index.html
@@ -10,8 +10,11 @@
 		<header>
 			<p>English <a href="/fr/goddess-metempsychosis/index.html">Français</a></p>
 			<h1>Goddess Metempsychosis</h1>
-			<p>a post-apocalyptic urban fantasy game</p>
-			<p>by Mender</p>
+			<p>
+				a post-apocalyptic urban fantasy game
+				<br>
+				by Mender
+			</p>
 		</header>
 		<h2>Available versions</h2>
 		<ul>
