--- a/en/index.html
+++ b/en/index.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Mender's web page</title>
-		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
+		<link href="../style.css" rel="stylesheet" type="text/css" media="all">
 	</head>
 	<body>
 		<header>
-			<p>English <a href=/fr/index.html>Français</a></p>
+			<p>English <a href=../fr/index.html>Français</a></p>
 			<h1>im mender? :/</h1>
 			<h2>Under Construction</h2>
 		</header>
