--- a/en/pencil-puzzles/index.html
+++ b/en/pencil-puzzles/index.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Japanese Logic Puzzles</title>
-		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
+		<link href="../../style.css" rel="stylesheet" type="text/css" media="all">
 	</head>
 	<body>
 		<header>
-			<p>English <a href="/fr/pencil-puzzles/index.html">Français</a></p>
+			<p>English <a href="../../fr/pencil-puzzles/index.html">Français</a></p>
 			<h1>Japanese Logic Puzzles</h1>
 		</header>
 		<p>This site is an archive of logic puzzles published by the Japanese company Nikoli.</p>
