--- a/en/pencil-puzzles/penpa2021/index.html
+++ b/en/pencil-puzzles/penpa2021/index.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>The Pencil Puzzle 2021 - Japanese Logic Puzzle Archive</title>
-		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
+		<link href="../../../style.css" rel="stylesheet" type="text/css" media="all">
 	</head>
 	<body>
 		<header>
-			<p>English <a href="/fr/pencil-puzzles/penpa2021/index.html">Français</a></p>
+			<p>English <a href="../../../fr/pencil-puzzles/penpa2021/index.html">Français</a></p>
 			<h1>The Pencil Puzzle 2021</h1>
 		</header>
 		<div id="container">
