--- a/en/goddess-metempsychosis/index.html
+++ b/en/goddess-metempsychosis/index.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Goddess Metempsychosis - a post-apocalyptic urban fantasy game</title>
-		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
+		<link href="../../style.css" rel="stylesheet" type="text/css" media="all">
 	</head>
 	<body>
 		<header>
-			<p>English <a href="/fr/goddess-metempsychosis/index.html">Français</a></p>
+			<p>English <a href="../../fr/goddess-metempsychosis/index.html">Français</a></p>
 			<h1>Goddess Metempsychosis</h1>
 			<p>
 				a post-apocalyptic urban fantasy game
