--- a/fr/goddess-metempsychosis/index.html
+++ b/fr/goddess-metempsychosis/index.html
@@ -4,14 +4,17 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>M&eacute;tempsychose de la d&eacute;esse - un jeu fantasy urbaine post-apocalyptique</title>
-		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
+		<link href="../../style.css" rel="stylesheet" type="text/css" media="all">
 	</head>
 	<body>
 		<header>
-			<p><a href="/fr/goddess-metempsychosis/index.html">English</a> Fran&ccedil;ais</p>
+			<p><a href="../../en/goddess-metempsychosis/index.html">English</a> Fran&ccedil;ais</p>
 			<h1>M&eacute;tempsychose de la d&eacute;esse</h1>
-			<p>un jeu de r&ocirc;le fantasy urbaine post-apocalyptique</p>
-			<p>par Mender</p>
+			<p>
+				un jeu de r&ocirc;le fantasy urbaine post-apocalyptique
+				<br>
+				par Mender
+			</p>
 		</header>
 		<h2>Versions disponibles</h2>
 		<ul>
