--- a/fr/index.html
+++ b/fr/index.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>La page web de Mender</title>
-		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
+		<link href="../style.css" rel="stylesheet" type="text/css" media="all">
 	</head>
 	<body>
 		<header>
-			<p><a href="/en/index.html">English</a> Fran&ccedil;ais</p>
+			<p><a href="../en/index.html">English</a> Fran&ccedil;ais</p>
 			<h1>im mender? :/</h1>
 			<h2>En construction</h2>
 		</header>
