--- a/fr/goddess-metempsychosis/0.0.8/index.html
+++ b/fr/goddess-metempsychosis/0.0.8/index.html
@@ -1,44 +1,58 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>M&eacute;tempsychose de la d&eacute;esse 0.0.8</title>
-		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
-	</head>
-	<body>
-		<header>
-			<p><a href="/en/goddess-metempsychosis/0.0.8/index.html">English</a> Français</p>
-			<h1>M&eacute;tempsychose de la d&eacute;esse 0.0.8 (Titre provisoire)</h1>
-			<p>un jeu de r&ocirc;le fantasy urbaine post-apocalyptique</p>
-			<p>par Mender</p>
-		</header>
-		<div id="container">
-			<div id="toc">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>M&eacute;tempsychose de la d&eacute;esse 0.0.8</title>
+	<link href="../../../style.css" rel="stylesheet" type="text/css" media="all">
+</head>
+
+<body>
+	<header>
+		<p><a href="../../../en/goddess-metempsychosis/0.0.8/index.html">English</a> Français</p>
+		<h1>M&eacute;tempsychose de la d&eacute;esse 0.0.8 (Titre provisoire)</h1>
+		<p>
+			un jeu de r&ocirc;le fantasy urbaine post-apocalyptique
+			<br>
+			par Mender
+		</p>
+	</header>
+	<div id="container">
+		<div id="toc">
+			<ul>
+				<li><a href="#avprop">Avant-propos</a></li>
+				<li><a href="#deesse">M&eacute;tempsychose de la d&eacute;esse</a></li>
 				<ul>
-					<li><a href="#avprop">Avant-propos</a></li>
-					<li><a href="#deesse">M&eacute;tempsychose de la d&eacute;esse</a></li>
-					<ul>
-						<li><a href="#cataclysme">Grand cataclysme</a></li>
-						<li><a href="#animus">Animus</a></li>
-						<li><a href="#survivants">Survivants</a></li>
-					</ul>
+					<li><a href="#cataclysme">Grand cataclysme</a></li>
+					<li><a href="#animus">Animus</a></li>
+					<li><a href="#survivants">Survivants</a></li>
 				</ul>
-			</div>
-			<div id="content">
-				<h2 id="avprop">Avant-propos</h2>
-				<p>
-					Ceci est un prototype de M&eacute;tempsychose de la déesse, un jeu de r&ocirc;le r&eacute;dig&eacute; par Mender, bas&eacute; sur la s&eacute;rie Shin Megami Tensei. Cette version du jeu peut &ecirc;tre jou&eacute;e et redistribu&eacute;e gratuitement. Une version payante sera disponible dans le futur, avec tout le contenu qui est destin&eacute; aux joueurs disponible gratis.
-				</p>
-				<h2 id="deesse">M&eacute;tempsychose de la déesse</h2>
-				<p>
-					M&eacute;tempsychose de la d&eacute;esse est un jeu de r&ocirc;le papier dans lequel les joueurs donnent forme &agrave; l'avenir d'un monde incertain alors que l'&eacute;quilibre entre le chaos et la loi s'effondre.
-				</p>
-				<h3 id="cataclysme">Grand cataclysme</h3>
-				<p>
-					D'une façon ou d'une autre, un cataclysme a enti&egrave;rement transform&eacute; le monde tel que vos personnages le connaissent. Les d&eacute;tails de ce cataclysme sont un exercice laiss&eacute; aux joueurs et au MdJ. C'&eacute;tait peut-&ecirc;tre une guerre nucl&eacute;aire mondiale, le dernier d'un cycle de renaissance universel, ou un armageddon fantastique quelconque.
-				</p>
-			</div>
+			</ul>
 		</div>
-	</body>
+		<div id="content">
+			<h2 id="avprop">Avant-propos</h2>
+			<p>
+				Ceci est un prototype de M&eacute;tempsychose de la déesse, un jeu de r&ocirc;le r&eacute;dig&eacute;
+				par Mender, bas&eacute; sur la s&eacute;rie Shin Megami Tensei. Cette version du jeu peut &ecirc;tre
+				jou&eacute;e et redistribu&eacute;e gratuitement. Une version payante sera disponible dans le futur,
+				avec tout le contenu qui est destin&eacute; aux joueurs disponible gratis.
+			</p>
+			<h2 id="deesse">M&eacute;tempsychose de la déesse</h2>
+			<p>
+				M&eacute;tempsychose de la d&eacute;esse est un jeu de r&ocirc;le papier dans lequel les joueurs donnent
+				forme &agrave; l'avenir d'un monde incertain alors que l'&eacute;quilibre entre le chaos et la loi
+				s'effondre.
+			</p>
+			<h3 id="cataclysme">Grand cataclysme</h3>
+			<p>
+				D'une façon ou d'une autre, un cataclysme a enti&egrave;rement transform&eacute; le monde tel que vos
+				personnages le connaissent. Les d&eacute;tails de ce cataclysme sont un exercice laiss&eacute; aux
+				joueurs et au MdJ. C'&eacute;tait peut-&ecirc;tre une guerre nucl&eacute;aire mondiale, le dernier d'un
+				cycle de renaissance universel, ou un armageddon fantastique quelconque.
+			</p>
+		</div>
+	</div>
+</body>
+
 </html>
