update index.html, not_found.html, style.css

--- a/en/goddess-metempsychosis/index.html
+++ b/en/goddess-metempsychosis/index.html
@@ -8,13 +8,9 @@
 	</head>
 	<body>
 		<header>
-			<p>English <a href="../../fr/goddess-metempsychosis/index.html">Français</a></p>
+			<p>English <a href="../../fr/goddess-metempsychosis/index.html">Fran&ccedil;ais</a></p>
 			<h1>Goddess Metempsychosis</h1>
-			<p>
-				a post-apocalyptic urban fantasy game
-				<br>
-				by Mender
-			</p>
+			<p>a post-apocalyptic urban fantasy game by Mender</p>
 		</header>
 		<h2>Available versions</h2>
 		<ul>
