--- a/en/pencil-puzzles/index.html
+++ b/en/pencil-puzzles/index.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Japanese Logic Puzzles</title>
-		<link href="../../style.css" rel="stylesheet" type="text/css" media="all">
-	</head>
-	<body>
-		<header>
-			<p>English <a href="../../fr/pencil-puzzles/index.html">Français</a></p>
-			<h1>Japanese Logic Puzzles</h1>
-		</header>
-		<p>This site is an archive of logic puzzles published by the Japanese company Nikoli.</p>
-		<h2>What is a logic puzzle?</h2>
-		<p>A logic puzzle is a game which can be played alone or with the help of others. The goal is to complete the puzzle while following the rules of the game. A logic puzzle can be completed either with a pencil and paper or digitally. Each type of puzzle follows a set of rules which is unique to it. The solution to a puzzle can usually be found through deduction.</p>
-		<h3>Note</h3>
-		<p>All puzzles on this website, unless otherwise noted, include a download for a .txt file which can be imported into one of the web apps at <a href="https://puzz.link/list.html">puzz.link</a>.</p>
-		<h1>Archives</h1>
-		<ul>
-			<li><a>The Pencil Puzzle 2020</a></li>
-			<li><a href="penpa2021/index.html">The Pencil Puzzle 2021</a></li>
-			<li><a>The Pencil Puzzle 2022</a></li>
-		</ul>
-	</body>
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Japanese Logic Puzzles</title>
+	<link href="../../style.css" rel="stylesheet" type="text/css" media="all">
+</head>
+
+<body>
+	<header>
+		<p>English <a href="../../fr/pencil-puzzles/index.html">Fran&ccedil;ais</a></p>
+		<h1>Japanese Logic Puzzles</h1>
+	</header>
+	<p>
+		This site is an archive of logic puzzles published by the Japanese company Nikoli.
+	</p>
+	<h2>What is a logic puzzle?</h2>
+	<p>
+		A logic puzzle is a game which can be played alone or with the help of others. The goal is to complete the puzzle while following the rules of the game. A logic puzzle can be completed either with a pencil and paper or digitally. Each type of puzzle follows a set of rules which is unique to it. The solution to a puzzle can usually be found through deduction.
+	</p>
+	<h3>Note</h3>
+	<p>
+		All puzzles on this website, unless otherwise noted, include a download for a .txt file which can be imported into one of the web apps at <a href="https://puzz.link/list.html">puzz.link</a>.
+	</p>
+	<h1>Archives</h1>
+	<ul>
+		<li><a>The Pencil Puzzle 2020</a></li>
+		<li><a href="penpa2021/index.html">The Pencil Puzzle 2021</a></li>
+		<li><a>The Pencil Puzzle 2022</a></li>
+	</ul>
+</body>
+
 </html>
