--- a/fr/goddess-metempsychosis/index.html
+++ b/fr/goddess-metempsychosis/index.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>M&eacute;tempsychose de la d&eacute;esse - un jeu fantasy urbaine post-apocalyptique</title>
-		<link href="../../style.css" rel="stylesheet" type="text/css" media="all">
-	</head>
-	<body>
-		<header>
-			<p><a href="../../en/goddess-metempsychosis/index.html">English</a> Fran&ccedil;ais</p>
-			<h1>M&eacute;tempsychose de la d&eacute;esse</h1>
-			<p>
-				un jeu de r&ocirc;le fantasy urbaine post-apocalyptique
-				<br>
-				par Mender
-			</p>
-		</header>
-		<h2>Versions disponibles</h2>
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>M&eacute;tempsychose de la d&eacute;esse - un jeu fantasy urbaine post-apocalyptique</title>
+	<link href="../../style.css" rel="stylesheet" type="text/css" media="all">
+</head>
+
+<body>
+	<header>
+		<p><a href="../../en/goddess-metempsychosis/index.html">English</a> Fran&ccedil;ais</p>
+		<h1>M&eacute;tempsychose de la d&eacute;esse</h1>
+		<p>un jeu de r&ocirc;le fantasy urbaine post-apocalyptique par Mender</p>
+	</header>
+	<h2>Versions disponibles</h2>
+	<ul>
+		<li>Non-jouables</li>
 		<ul>
-			<li>Non-jouables</li>
-			<ul>
-				<li><a href="0.0.8/index.html">0.0.8</a></li>
-			</ul>
+			<li><a href="0.0.8/index.html">0.0.8</a></li>
 		</ul>
-	</body>
+	</ul>
+</body>
+
 </html>
