--- a/fr/pencil-puzzles/index.html
+++ b/fr/pencil-puzzles/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Casse-têtes logiques japonais</title>
-		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
-	</head>
-	<body>
-		<header>
-			<p><a href="/en/pencil-puzzles/index.html">English</a> Français</p>
-			<h1>Casse-têtes logiques japonais</h1>
-		</header>
-		<p>Ce site est une archive de casse-têtes logiques publiés par la compagnie japonaise Nikoli.</p>
-		<h2>Qu'est-ce qu'un casse-tête logique ?</h2>
-		<p>Un casse-tête logique est un jeu qui peut être joué seul ou avec l'aide d'autres. Le but est de compléter le casse-tête en suivant les règles du jeu. Un casse-tête logique peut être complété soit avec un papier et un crayon ou de façon numérique. Chaque type de casse-tête suit un ensemble de règles qui lui est propre. La solution peut habituellement être trouvée en utilisant la déduction.</p>
-		<h3>Note</h3>
-		<p>Chaque casse-tête sur ce site web (à moins que l'inverse soit indiqué) inclut un fichier .txt téléchargeable qui peut être importé dans une des applications web sur le site de <a href="https://puzz.link/list.html">puzz.link</a>.</p>
-		<h1>Archives</h1>
-		<ul>
-			<li><a>The Pencil Puzzle 2020</a></li>
-			<li><a href="penpa2021/index.html">The Pencil Puzzle 2021</a></li>
-			<li><a>The Pencil Puzzle 2022</a></li>
-		</ul>
-	</body>
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Casse-t&ecirc;tes logiques japonais</title>
+	<link href="../../style.css" rel="stylesheet" type="text/css" media="all">
+</head>
+
+<body>
+	<header>
+		<p><a href="../../en/pencil-puzzles/index.html">English</a> Fran&ccedil;ais</p>
+		<h1>Casse-t&ecirc;tes logiques japonais</h1>
+	</header>
+	<p>Ce site est une archive de casse-t&ecirc;tes logiques publi&eacute;s par la compagnie japonaise Nikoli.</p>
+	<h2>Qu'est-ce qu'un casse-t&ecirc;te logique ?</h2>
+	<p>
+		Un casse-t&ecirc;te logique est un jeu qui peut &ecirc;tre jou&eacute; seul ou avec l'aide d'autres. Le but est de compl&eacute;ter le casse-t&ecirc;te en suivant les r&egrave;gles du jeu. Un casse-t&ecirc;te logique peut &ecirc;tre compl&eacute;t&eacute; soit avec un papier et un crayon ou de fa&ccedil;on num&eacute;rique. Chaque type de casse-t&ecirc;te suit un ensemble de r&egrave;gles qui lui est propre. La solution peut habituellement &ecirc;tre trouv&eacute;e en utilisant la d&eacute;duction.
+	</p>
+	<h3>Note</h3>
+	<p>
+		Chaque casse-t&ecirc;te sur ce site web (&agrave; moins que l'inverse soit indiqu&eacute;) inclut un fichier .txt t&eacute;l&eacute;chargeable qui peut &ecirc;tre import&eacute; dans une des applications web sur le site de <a href="https://puzz.link/list.html">puzz.link</a>.
+	</p>
+	<h1>Archives</h1>
+	<ul>
+		<li><a>The Pencil Puzzle 2020</a></li>
+		<li><a href="penpa2021/index.html">The Pencil Puzzle 2021</a></li>
+		<li><a>The Pencil Puzzle 2022</a></li>
+	</ul>
+</body>
+
 </html>
