--- a/en/goddess-metempsychosis/0.0.8/index.html
+++ b/en/goddess-metempsychosis/0.0.8/index.html
@@ -10,13 +10,9 @@
 
 <body>
 	<header>
-		<p>English <a href="../../../fr/goddess-metempsychosis/0.0.8/index.html">Français</a></p>
+		<p>English <a href="../../../fr/goddess-metempsychosis/0.0.8/index.html">Fran&ccedil;ais</a></p>
 		<h1>Goddess Metempsychosis 0.0.8 (Working Title)</h1>
-		<p>
-			a post-apocalyptic urban fantasy game
-			<br>
-			by Mender
-		</p>
+		<p>a post-apocalyptic urban fantasy game by Mender</p>
 	</header>
 	<div id="container">
 		<div id="toc">
@@ -33,20 +29,15 @@
 		<div id="content">
 			<h2 id="foreword">Foreword</h2>
 			<p>
-				This is a prototype for Goddess Metempsychosis, a roleplaying game written by Mender, based on the Shin
-				Megami Tensei series. This version of the game is free to play and distribute. A paid version will be
-				forthcoming, with all player-facing content available for free.
+				This is a prototype for Goddess Metempsychosis, a roleplaying game written by Mender, based on the Shin Megami Tensei series. This version of the game is free to play and distribute. A paid version will be forthcoming, with all player-facing content available for free.
 			</p>
 			<h2 id="goddess">Goddess Metempsychosis</h2>
 			<p>
-				Goddess Metempsychosis is a pen-and-paper roleplaying game where players shape the future of an
-				uncertain world as the balance of chaos and law crumbles.
+				Goddess Metempsychosis is a pen-and-paper roleplaying game where players shape the future of an uncertain world as the balance of chaos and law crumbles.
 			</p>
 			<h3 id="cataclysm">Great Cataclysm</h3>
 			<p>
-				In one way or another, a cataclysm has entirely transformed the world as your characters know it.
-				Whether that cataclysm is a global nuclear war, the latest in a cycle of universal rebirth, or some
-				fantastical armageddon is left as an exercise to the players and game master.
+				In one way or another, a cataclysm has entirely transformed the world as your characters know it. Whether that cataclysm is a global nuclear war, the latest in a cycle of universal rebirth, or some fantastical armageddon is left as an exercise to the players and game master.
 			</p>
 		</div>
 	</div>
