--- a/fr/pencil-puzzles/penpa2021/index.html
+++ b/fr/pencil-puzzles/penpa2021/index.html
@@ -1,49 +1,52 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>The Pencil Puzzle 2021 - Archive de casse-têtes logiques japonais</title>
-		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
-	</head>
-	<body>
-		<header>
-			<p><a href="/en/pencil-puzzles/penpa2021">English</a> Français</p>
-			<h1>The Pencil Puzzle 2021</h1>
-		</header>
-		<div id="container">
-			<div id="toc">
-				<ul>
-					<li><a href="#pencils">Pencils</a> (<a href="../pencils/index.html">Règles</a>)</li>
-					<li><a href="#numlin">Numberlink</a> (<a href="../numlin/index.html">Règles</a>)</li>
-					<li><a href="#masyu">Masyu</a> (<a href="../masyu/index.html">Règles</a>)</li>
-					<li><a href="#fillomino">Fillomino</a> (<a href="../fillomino/index.html">Règles</a>)</li>
-					<li><a href="#yajilin">Yajilin</a> (<a href="../yajilin/index.html">Règles</a>)</li>
-					<li><a href="#dbchoco">Double Choco</a> (<a href="../dbchoco/index.html">Règles</a>)</li>
-					<li><a href="#dotiloop">Dotchi-Loop</a> (<a href="../dotiloop/index.html">Règles</a>)</li>
-					<li><a href="#heyawake">Heyawake</a> (<a href="../heyawake/index.html">Règles</a>)</li>
-					<li><a href="#slither">Slitherlink</a> (<a href="../slither/index.html">Règles</a>)</li>
-					<li><a href="#kakuro">Kakuro</a> (<a href="../kakuro/index.html">Règles</a>)</li>
-					<li><a href="#heyageant">Heyawake le géant</a> (<a href="../heyawake/index.html">Règles</a>)</li>
-					<li><a href="#masyugeant">Masyu le géant</a> (<a href="../masyu/index.html">Règles</a>)</li>
-					<li><a href="#reponse">Réponses</a></li>
-				</ul>
-			</div>
-			<div id="content">
-				<h2 id="pencils">Pencils</h2>
-				<h2 id="numlin">Numberlink</h2>
-				<h2 id="masyu">Masyu</h2>
-				<h2 id="fillomino">Fillomino</h2>
-				<h2 id="yajilin">Yajilin</h2>
-				<h2 id="dbchoco">Double Choco</h2>
-				<h2 id="dotiloop">Dotchi-Loop</h2>
-				<h2 id="heyawake">Heyawake</h2>
-				<h2 id="slither">Slitherlink</h2>
-				<h2 id="kakuro">Kakuro</h2>
-				<h2 id="heyageant">Heyawake The Giant</h2>
-				<h2 id="masyugeant">Masyu The Giant</h2>
-				<h3 id="reponse">Réponses</h3>
-			</div>
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>The Pencil Puzzle 2021 - Archive de casse-t&ecirc;tes logiques japonais</title>
+	<link href="/style.css" rel="stylesheet" type="text/css" media="all">
+</head>
+
+<body>
+	<header>
+		<p><a href="/en/pencil-puzzles/penpa2021">English</a> Français</p>
+		<h1>The Pencil Puzzle 2021</h1>
+	</header>
+	<div id="container">
+		<div id="toc">
+			<ul>
+				<li><a href="#pencils">Pencils</a> (<a href="../pencils/index.html">R&egrave;gles</a>)</li>
+				<li><a href="#numlin">Numberlink</a> (<a href="../numlin/index.html">R&egrave;gles</a>)</li>
+				<li><a href="#masyu">Masyu</a> (<a href="../masyu/index.html">R&egrave;gles</a>)</li>
+				<li><a href="#fillomino">Fillomino</a> (<a href="../fillomino/index.html">R&egrave;gles</a>)</li>
+				<li><a href="#yajilin">Yajilin</a> (<a href="../yajilin/index.html">R&egrave;gles</a>)</li>
+				<li><a href="#dbchoco">Double Choco</a> (<a href="../dbchoco/index.html">R&egrave;gles</a>)</li>
+				<li><a href="#dotiloop">Dotchi-Loop</a> (<a href="../dotiloop/index.html">R&egrave;gles</a>)</li>
+				<li><a href="#heyawake">Heyawake</a> (<a href="../heyawake/index.html">R&egrave;gles</a>)</li>
+				<li><a href="#slither">Slitherlink</a> (<a href="../slither/index.html">R&egrave;gles</a>)</li>
+				<li><a href="#kakuro">Kakuro</a> (<a href="../kakuro/index.html">R&egrave;gles</a>)</li>
+				<li><a href="#heyageant">Heyawake le g&eacute;ant</a> (<a href="../heyawake/index.html">R&egrave;gles</a>)</li>
+				<li><a href="#masyugeant">Masyu le g&eacute;ant</a> (<a href="../masyu/index.html">R&egrave;gles</a>)</li>
+				<li><a href="#reponse">R&eacute;ponses</a></li>
+			</ul>
 		</div>
-	</body>
+		<div id="content">
+			<h2 id="pencils">Pencils</h2>
+			<h2 id="numlin">Numberlink</h2>
+			<h2 id="masyu">Masyu</h2>
+			<h2 id="fillomino">Fillomino</h2>
+			<h2 id="yajilin">Yajilin</h2>
+			<h2 id="dbchoco">Double Choco</h2>
+			<h2 id="dotiloop">Dotchi-Loop</h2>
+			<h2 id="heyawake">Heyawake</h2>
+			<h2 id="slither">Slitherlink</h2>
+			<h2 id="kakuro">Kakuro</h2>
+			<h2 id="heyageant">Heyawake The Giant</h2>
+			<h2 id="masyugeant">Masyu The Giant</h2>
+			<h3 id="reponse">R&eacute;ponses</h3>
+		</div>
+	</div>
+</body>
+
 </html>
