--- a/not_found.html
+++ b/not_found.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Not Found</title>
-    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
-  </head>
-  <body>
-    <h1>Page Not Found</h1>
-    <p>The requested page was not found.</p>
-    <a href="/en">Return to the English site</a>
-    <h1>Erreur 404 - Page introuvable</h1>
-    <p>La page demandée n'a pas été trouvée.</p>
-    <a href="/fr">Retourner au site Français</a>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Not Found</title>
+  <link href="style.css" rel="stylesheet" type="text/css" media="all">
+</head>
+
+<body>
+  <h1>Page Not Found</h1>
+  <p>The requested page was not found.</p>
+  <a href="en/index.html">Return to the English site</a>
+  <h1>Erreur 404 - Page introuvable</h1>
+  <p>La page demandée n'a pas été trouvée.</p>
+  <a href="fr/index.html">Retourner au site Français</a>
+</body>
+
 </html>
