--- a/fr/pencil-puzzles/penpa2021/index.html
+++ b/fr/pencil-puzzles/penpa2021/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	<header>
-		<p><a href="/en/pencil-puzzles/penpa2021">English</a> Français</p>
+		<p><a href="/en/pencil-puzzles/penpa2021">English</a> Fran&ccedil;ais</p>
 		<h1>The Pencil Puzzle 2021</h1>
 	</header>
 	<div id="container">
