--- a/not_found.html
+++ b/not_found.html
@@ -13,8 +13,8 @@
   <p>The requested page was not found.</p>
   <a href="en/index.html">Return to the English site</a>
   <h1>Erreur 404 - Page introuvable</h1>
-  <p>La page demandée n'a pas été trouvée.</p>
-  <a href="fr/index.html">Retourner au site Français</a>
+  <p>La page demand&eacute;e n'a pas &eacute;t&eacute; trouv&eacute;e.</p>
+  <a href="fr/index.html">Retourner au site Fran&ccedil;ais</a>
 </body>
 
 </html>
