--- a/fr/goddess-metempsychosis/0.0.8/index.html
+++ b/fr/goddess-metempsychosis/0.0.8/index.html
@@ -29,15 +29,15 @@
 		<div id="content">
 			<h2 id="avprop">Avant-propos</h2>
 			<p>
-				Ceci est un prototype de M&eacute;tempsychose de la déesse, un jeu de r&ocirc;le r&eacute;dig&eacute; par Mender, bas&eacute; sur la s&eacute;rie Shin Megami Tensei. Cette version du jeu peut &ecirc;tre jou&eacute;e et redistribu&eacute;e gratuitement. Une version payante sera disponible dans le futur, avec tout le contenu qui est destin&eacute; aux joueurs disponible gratis.
+				Ceci est un prototype de M&eacute;tempsychose de la d&eacute;esse, un jeu de r&ocirc;le r&eacute;dig&eacute; par Mender, bas&eacute; sur la s&eacute;rie Shin Megami Tensei. Cette version du jeu peut &ecirc;tre jou&eacute;e et redistribu&eacute;e gratuitement. Une version payante sera disponible dans le futur, avec tout le contenu qui est destin&eacute; aux joueurs disponible gratis.
 			</p>
-			<h2 id="deesse">M&eacute;tempsychose de la déesse</h2>
+			<h2 id="deesse">M&eacute;tempsychose de la d&eacute;esse</h2>
 			<p>
 				M&eacute;tempsychose de la d&eacute;esse est un jeu de r&ocirc;le papier dans lequel les joueurs donnent forme &agrave; l'avenir d'un monde incertain alors que l'&eacute;quilibre entre le chaos et la loi s'effondre.
 			</p>
 			<h3 id="cataclysme">Grand cataclysme</h3>
 			<p>
-				D'une façon ou d'une autre, un cataclysme a enti&egrave;rement transform&eacute; le monde tel que vos personnages le connaissent. Les d&eacute;tails de ce cataclysme sont un exercice laiss&eacute; aux joueurs et au MdJ. C'&eacute;tait peut-&ecirc;tre une guerre nucl&eacute;aire mondiale, le dernier d'un cycle de renaissance universel, ou un armageddon fantastique quelconque.
+				D'une fa&ccedil;on ou d'une autre, un cataclysme a enti&egrave;rement transform&eacute; le monde tel que vos personnages le connaissent. Les d&eacute;tails de ce cataclysme sont un exercice laiss&eacute; aux joueurs et au MdJ. C'&eacute;tait peut-&ecirc;tre une guerre nucl&eacute;aire mondiale, le dernier d'un cycle de renaissance universel, ou un armageddon fantastique quelconque.
 			</p>
 		</div>
 	</div>
