--- a/en/goddess-metempsychosis/0.0.8/index.html
+++ b/en/goddess-metempsychosis/0.0.8/index.html
@@ -10,8 +10,15 @@
 
 <body>
 	<header>
-		<p>English <a href="../../../fr/goddess-metempsychosis/0.0.8/index.html">Fran&ccedil;ais</a></p>
-		<h1>Goddess Metempsychosis 0.0.8 (Working Title)</h1>
+		<nav class="crumbs">
+			<div class="langnav">English &lrarr; <a href="../../../fr/goddess-metempsychosis/0.0.8/index.html">Fran&ccedil;ais</a></div>
+			<ol>
+				<li class="crumb"><a href="../../index.html">Home</a></li>
+				<li class="crumb"><a href="../index.html">Goddess Metempsychosis</a></li>
+				<li class="crumb">0.0.8</li>
+			</ol>
+		</nav>
+		<h1>Goddess Metempsychosis 0.0.8</h1>
 		<p>a post-apocalyptic urban fantasy game by Mender</p>
 	</header>
 	<div id="container">
