--- a/en/goddess-metempsychosis/index.html
+++ b/en/goddess-metempsychosis/index.html
@@ -8,7 +8,13 @@
 	</head>
 	<body>
 		<header>
-			<p>English <a href="../../fr/goddess-metempsychosis/index.html">Fran&ccedil;ais</a></p>
+			<nav class="crumbs">
+				<div class="langnav">English &lrarr; <a href="../../fr/goddess-metempsychosis/index.html">Fran&ccedil;ais</a></div>
+				<ol>
+					<li class="crumb"><a href="../index.html">Home</a></li>
+					<li class="crumb">Goddess Metempsychosis</li>
+				</ol>
+			</nav>
 			<h1>Goddess Metempsychosis</h1>
 			<p>a post-apocalyptic urban fantasy game by Mender</p>
 		</header>
