--- a/en/pencil-puzzles/index.html
+++ b/en/pencil-puzzles/index.html
@@ -10,11 +10,17 @@
 
 <body>
 	<header>
-		<p>English <a href="../../fr/pencil-puzzles/index.html">Fran&ccedil;ais</a></p>
+		<nav class="crumbs">
+			<div class="langnav">English &lrarr; <a href="../../fr/pencil-puzzles/index.html">Fran&ccedil;ais</a></div>
+			<ol>
+				<li class="crumb"><a href="../index.html">Home</a></li>
+				<li class="crumb">Japanese Logic Puzzle Archive</li>
+			</ol>
+		</nav>
 		<h1>Japanese Logic Puzzles</h1>
 	</header>
 	<p>
-		This site is an archive of logic puzzles published by the Japanese company Nikoli.
+		This page is an archive of logic puzzles published by the Japanese company Nikoli.
 	</p>
 	<h2>What is a logic puzzle?</h2>
 	<p>
