--- a/fr/index.html
+++ b/fr/index.html
@@ -4,13 +4,18 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>La page web de Mender</title>
+	<title>Accueil - im mender? :/</title>
 	<link href="../style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body>
 	<header>
-		<p><a href="../en/index.html">English</a> Fran&ccedil;ais</p>
+		<nav class="crumbs">
+			<div class="langnav"><a href="../en/index.html">English</a> &lrarr; Fran&ccedil;ais</div>
+			<ol>
+				<li class="crumb">Accueil</li>
+			</ol>
+		</nav>
 		<h1>im mender? :/</h1>
 		<h2>En construction</h2>
 	</header>
