--- a/fr/pencil-puzzles/index.html
+++ b/fr/pencil-puzzles/index.html
@@ -10,7 +10,13 @@
 
 <body>
 	<header>
-		<p><a href="../../en/pencil-puzzles/index.html">English</a> Fran&ccedil;ais</p>
+		<nav class="crumbs">
+			<div class="langnav"><a href="../../en/pencil-puzzles/index.html">English</a> &lrarr; Fran&ccedil;ais</div>
+			<ol>
+				<li class="crumb"><a href="../index.html">Accueil</a></li>
+				<li class="crumb">Casse-t&ecirc;tes logiques japonais</li>
+			</ol>
+		</nav>
 		<h1>Casse-t&ecirc;tes logiques japonais</h1>
 	</header>
 	<p>Ce site est une archive de casse-t&ecirc;tes logiques publi&eacute;s par la compagnie japonaise Nikoli.</p>
