--- a/en/index.html
+++ b/en/index.html
@@ -4,13 +4,18 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Mender's web page</title>
+	<title>Home - im mender? :/</title>
 	<link href="../style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body>
 	<header>
-		<p>English <a href=../fr/index.html>Fran&ccedil;ais</a></p>
+		<nav class="crumbs">
+			<div class="langnav">English &lrarr; <a href="../fr/index.html">Fran&ccedil;ais</a></div>
+			<ol>
+				<li class="crumb">Home</a></li>
+			</ol>
+		</nav>
 		<h1>im mender? :/</h1>
 		<h2>Under Construction</h2>
 	</header>
